Up-versioning the Murkel library to the latest version